--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
+    "hardhat-abi-exporter": "^2.2.1",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "*",
     "solhint": "^3.3.6"
